# agent-cli

./: .gitignore  LICENSE  README.md  agent-cli.py  index.html  pyproject.toml  security.md  setup-wizard.py  setup.py
.github/workflows/: test.yml
agent_cli/: __init__.py  __main__.py  templates.json
tests/: test_cli.py
